Fix: Vertical alignment of cardinality badge (.occurs class)

--- a/main.css
+++ b/main.css
@@ -95,7 +95,7 @@ xbe-ref {
 /* === Badges === */
 .occurs {
     display: inline-flex;
-    align-self: end;
+    align-self: baseline;
     margin-left: 8px;
     border-radius: 10px;
     padding: 1px 8px;
